ba2y elportfolio we el styles mn el json

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -43,7 +43,8 @@ page-contact {
   #pEndOfPage{
     font-size: 11px;
      font-family: Raleway-Bold;
-     color: rgb(1, 37, 51)
+     color: rgb(1, 37, 51);
+     white-space:inherit;
   }
 
   }
