--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -1,4 +1,4 @@
-page-portfolio {
+page-gallery {
   #ionCard{
     margin-bottom: 0px;
     margin-top: 0px;
@@ -27,5 +27,4 @@ page-portfolio {
      font-family: Raleway-Bold;
      font-size: 13px;
   }
-
 }
