--- a/src/pages/offers/offers.scss
+++ b/src/pages/offers/offers.scss
@@ -1,4 +1,4 @@
-page-about {
+page-offers {
 
     #ionContent{
       background-color: rgb(228, 226, 226);
@@ -36,7 +36,7 @@ page-about {
       color:rgb(96, 158, 238);margin-right: 7px;font-size: 23px;
     }
     #H6ContentService{
-      padding: 1px;font-family: Raleway-Regular;font-size: 10px;color: rgb(114, 112, 112)
+      padding: 1px;font-family: Raleway-Regular;font-size: 10px;color: rgb(114, 112, 112);
     }
     }
 
