--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -10,6 +10,7 @@ page-services {
    width:100%;
    background-size: cover  ;
 
+
    background-image: url('../../assets/imgs/background.png' );
 }
 #iconCardHeaderService{
@@ -22,7 +23,7 @@ page-services {
   color:white;margin-top: 5px;
 }
 #ionCardConent{
-  margin-bottom: 60px; margin-top: 0px;
+ margin-top: 0px;
 }
 #h6ServiceContent{
   color:white; font-size: 10px;
